objects/Lead.object
<CustomObject><fields>
        <fullName>Chance_of_on_going_work__c</fullName>
        <inlineHelpText>Enter a whole number from 0% - 100%.

0% is no chance, 100% is definitely</inlineHelpText>
        <label>Chance of on going work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Check_All_Fields__c</fullName>
        <formula>IF( ISBLANK(Estimated_Client_Value_pa__c), 0, IF(ISBLANK(Chance_of_on_going_work__c),0,IF(ISBLANK(Debt_Risk__c),0,IF(ISBLANK(Off_On_Shore__c),0,1))))</formula>
        <label>Check All Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Client_Rating__c</fullName>
        <formula>IF(Check_All_Fields__c = 1,  IF(Rating_Score__c&lt;20, "D",  IF(Rating_Score__c&lt;30, "C",  IF(Rating_Score__c&lt;40, "B",  IF(Rating_Score__c&lt;=50, "A", "") ) ) ) , "")</formula>
        <label>Client Rating</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Competitor__c</fullName>
        <inlineHelpText>Write the name of the lead's current supplier here</inlineHelpText>
        <label>Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Debt_Risk__c</fullName>
        <inlineHelpText>Enter a whole number from 0% - 100%, where 0% is no risk and 100% is very risky.</inlineHelpText>
        <label>Debt Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Estimated_Client_Value_pa__c</fullName>
        <label>Estimated Client Value pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Off_On_Shore__c</fullName>
        <inlineHelpText>Enter a whole number from 0% - 100% Where 0% is all work off shore and 100% is all work on shore.</inlineHelpText>
        <label>% Of Work On Shore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Rating_Score__c</fullName>
        <formula>Rating_for_Estimated_Client_Value_pa__c + Rating_for_Chance_of_on_going_work__c + Rating_for_debt_risk__c +  Rating_for_off_On_Shore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_Chance_of_on_going_work__c</fullName>
        <formula>IF( Chance_of_on_going_work__c == 1,10,0)</formula>
        <label>Rating for Chance of on going work</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_Estimated_Client_Value_pa__c</fullName>
        <formula>IF( Estimated_Client_Value_pa__c &lt; 50000,0,  IF(Estimated_Client_Value_pa__c &lt;= 249000, 5,  IF(Estimated_Client_Value_pa__c &lt;= 499999, 10,  IF(Estimated_Client_Value_pa__c &lt;= 999999, 15,  IF(Estimated_Client_Value_pa__c &gt;=1000000, 20, 0) ) ) ) )</formula>
        <label>Rating for Estimated Client Value pa</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_debt_risk__c</fullName>
        <formula>IF( Debt_Risk__c =1,0, 10)</formula>
        <label>Rating for debt risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_off_On_Shore__c</fullName>
        <formula>IF( Off_On_Shore__c = 1, 10,0)</formula>
        <label>Rating for off/On Shore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Service_areas__c</fullName>
        <label>Service areas</label>
        <picklist>
            <picklistValues>
                <fullName>MINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TURBO TECHNOLOGOES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUMPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGRICULTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIQUID PETROLEUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUGAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUFACTURING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEAVY HAULAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WATER DRILLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFTERMARKET AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAIL GENERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENGINEERING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DREDGING</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Subcontractor__c</fullName>
        <label>Subcontractor</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>ReadWriteTransfer</sharingModel><listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews><listViews>
        <fullName>My_Leads</fullName>
        <columns>Follow_Up_Date__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Client_Rating__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>Estimated_Client_Value_pa__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>notEqual</operation>
            <value>Dead</value>
        </filters>
        <label>My Leads</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Leads</label>
    </listViews></CustomObject>